--- a/tv3.html
+++ b/tv3.html
@@ -132,6 +132,13 @@
     }
 
     #opacityx{opacity:0.2}
+
+    ::-webkit-scrollbar {
+      height: 30px;
+      background-color: #2b2b2b;
+    }
+
+    
   </style>
 </head>
 <body>
