--- a/tv3.html
+++ b/tv3.html
@@ -12,9 +12,14 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+
+
+
+
+
   <style>
     :root {
-      --bg-color: #0f0f0f;
+      --bg-color: #000000;
       --accent-color: #1f1f1f;
       --text-color: #fff;
       --hover-color: #333;
@@ -30,6 +35,7 @@
       flex-direction: column;
       height: 100vh;
       overflow: hidden;
+      align-items: center; 
     }
 
     #video-container {
@@ -37,8 +43,9 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      position: relative;
+      position: absolute;
       background-color: black;
+      height:94%;
     }
 
     video, iframe {
@@ -133,12 +140,14 @@
 
     #opacityx{opacity:0.2}
 
+
     ::-webkit-scrollbar {
       height: 30px;
       background-color: #2b2b2b;
     }
 
-    
+
+
   </style>
 </head>
 <body>
@@ -148,6 +157,9 @@
   <iframe id="youtube-frame" title="YouTube Player" allow="autoplay; encrypted-media" allowfullscreen style="display: none;"></iframe>
   <div id="opacityx"> <div id="channel-name-overlay"></div> </div>
 </div>
+
+
+
 
 <nav id="channel-bar">
   <ul>
@@ -220,6 +232,7 @@
     <li data-id="bein1" data-src="https://tv.arectv34.sbs/live/t4.m3u8">🔘TİVİBU SPOR 4</li>
   </ul>
 </nav>
+
 
 <script>
   const video = document.getElementById('video');
