--- a/tv2.html
+++ b/tv2.html
@@ -64,7 +64,7 @@
       bottom: 60px;
       left: 12px;
       right: 12px;
-      max-height: 250px;
+      height: 90%;
       overflow-y: auto;
       background: var(--accent-color);
       border-radius: 12px;
