--- a/tv2.html
+++ b/tv2.html
@@ -6,7 +6,8 @@
   <title>TVmob</title>
   <meta name="theme-color" content="#111111">
   <link rel="manifest" href="manifest.json">
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/svg+xml"
+      href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='0.9em' font-size='90'%3E%F0%9F%93%BA%3C/text%3E%3C/svg%3E" />
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <style>
     :root {
